<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_prices"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/txt_lable_prices"/>
    <item
        android:id="@+id/page_favouite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/txt_lable_favouite"/>
    <item
        android:id="@+id/page_portfolio"
        android:enabled="true"
        android:icon="@drawable/ic_bar_graph"
        android:title="@string/txt_lable_portfolio"/>
    <item
        android:id="@+id/page_news"
        android:enabled="true"
        android:icon="@drawable/ic_rss"
        android:title="@string/txt_lable_news"/>
    <item
        android:id="@+id/page_invest"
        android:enabled="true"
        android:icon="@drawable/ic_money_graph_with_up_arrow"
        android:title="@string/txt_lable_invest"/>
</menu>